logs/dwdj.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dwdj'...
Listing './lib/python3.5/site-packages/dwdj/management'...
Listing './lib/python3.5/site-packages/dwdj/management/commands'...
Compiling './lib/python3.5/site-packages/dwdj/management/commands/checkmigrations.py'...
***   File "./lib/python3.5/site-packages/dwdj/management/commands/checkmigrations.py", line 61
    print "All available migrations have been applied."
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dwdj/management/commands/dump_app_data.py'...
***   File "./lib/python3.5/site-packages/dwdj/management/commands/dump_app_data.py", line 69
    print "no data for %r; removing %r" %(app_name, output_file)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dwdj/templatetags'...
Compiling './lib/python3.5/site-packages/dwdj/templatetags/mkrange.py'...
***   File "./lib/python3.5/site-packages/dwdj/templatetags/mkrange.py", line 40
    raise TemplateSyntaxError, "%s accepts the syntax: {%% %s [start,] " +\
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dwdj/templatetags/tests'...
Compiling './lib/python3.5/site-packages/dwdj/testing.py'...
***   File "./lib/python3.5/site-packages/dwdj/testing.py", line 49
    print "error decoding json:"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dwdj/tests'...
Listing './lib/python3.5/site-packages/dwdj-0.9.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
